--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1 #{title}
+    h1.title-default #{title}
     ul.list-group
         each page, i in pages
             li.list-group-item
