--- a/views/login.pug
+++ b/views/login.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1 Login
+    h1.title-default Login
     form(method='POST', action='/users/login')
         #form-group
             label Username:
