--- a/views/page.pug
+++ b/views/page.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1= page.title
+    h1.title-default= page.title
     h5 Written by #{author}
     p= page.body
     hr
