--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,9 +2,15 @@ doctype html
 html
     head
         title Immersive CMS
+        meta(charset='UTF-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
         link(rel='stylesheet' href='/css/style.css')
-        link(href='https://fonts.googleapis.com/css?family=Lato', rel='stylesheet')
+        link(rel='icon', href='/diamond.gif', type='image/x-icon')
+        link(href='https://fonts.googleapis.com/css?family=Lato|Press+Start+2P', rel='stylesheet')
+        link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
+        style.
+            .mySlides {display: none}
     body
         header
         // Fixed navbar
@@ -18,13 +24,15 @@ html
                         a.nav-link(href='/')
                             | Home
                             span.sr-only (current)
+                    li.nav-item
+                        a.nav-link(href='/pages') Pages
                     if user
                         li.nav-item
                             a.nav-link(href='/pages/add') Add Page
                 ul.navbar-nav.navbar-right
                     if user
                         li 
-                            a(href='/users/logout') Logout
+                            a(href='/users/logout', style='color:white') Logout
                     else
                         li.nav-item
                             a.nav-link(href='/users/register') Register
@@ -34,7 +42,7 @@ html
                     input.form-control.mr-sm-2(type='text', placeholder='Search', aria-label='Search')
                     button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
         // Begin page content
-        main.container(role='main')
+        main(role='main')
             .container
                 != messages('message', locals)
                 if errors
@@ -44,10 +52,12 @@ html
                 br
                 hr
         footer.footer.container
-            p Copyright &copy; 2018
+            p.text-muted.text-center Copyright &copy; 2018
         script(src='/bower_components/jquery/dist/jquery.js')
         script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
         script(src='/js/main.js')
+
+
         
 
         
