--- a/views/login.pug
+++ b/views/login.pug
@@ -1,13 +1,18 @@
 extends layout
 
 block content
-    h1.title-default Login
-    form(method='POST', action='/users/login')
-        #form-group
-            label Username:
-            input.form-control(name='username', type='text')
-        #form-group
-            label Password:
-            input.form-control(name='password', type='password')
-        br
-        input.btn.btn-primary(type='submit',value='Submit')
+    .main-container-sub.container
+        .row
+            .justify-content-center.col-md-4.offset-md-4
+                .text-center
+                    img.mb-4.img-rad(src='/diamond.gif', alt='', width='72', height='72')
+                h1.title-default.text-center Login
+                form.form-signin(method='POST', action='/users/login')
+                    #form-group
+                        label Username:
+                        input.form-control(name='username', type='text', placeholder='Username')
+                    #form-group
+                        label Password:
+                        input.form-control(name='password', type='password', placeholder='Password')
+                    br
+                    input.btn.btn-primary.btn-block(type='submit',value='Submit')
